# PackingUtils

./: Docker  Dockerfile  README.md  _test_api.py  api.py  main.py  pyproject.toml  pytest.ini  requirements.txt  requirements_greedy.txt  requirements_palletier.txt  setup.py  test_api.py
_api_packing/: README.md  _test_api.py  api.py  test_api.py
_api_packing_images/: Dockerfile  README.md
api_packing/: Dockerfile  README.md  _test_api.py  api.py  requirements.txt  test_api.py  test_api_v1.py
api_packing/v1/: api.py
api_packing_images/: Dockerfile  README.md  api.py  requirements.txt  test_api.py  test_api_v1.py  test_image_api_v1.py
api_packing_images/v1/: api.py
packing_utils/: heuristic_2D.py
packing_utils/data/: container.py  item.py  space.py
packutils/data/: article.py  bin.py  item.py  order.py  packed_order.py  packer_configuration.py  packing_variant.py  position.py  snappoint.py
packutils/dataset/: data_generator_2d.py  data_loader.py  packing_data_loader.py
packutils/eval/: packing_evaluation.py
packutils/solver/: abstract_packer.py  greedy_packer.py  palletier_packer.py  palletier_wish_packer.py  py3dbp_packer.py
packutils/visual/: packing_visualization.py
tests/: test_demo.py  test_order.json
tests/data/: test_article.py  test_bin.py  test_grouped_item.py  test_item.py  test_order.py  test_packed_order.py  test_packer_configuration.py  test_packing_variant.py  test_position.py  test_single_item.py
tests/dataset/: test_data_generator_2d.py  test_data_loader.py  test_packing_data_loader.py
tests/eval/: test_packing_evaluation.py
(+35 files in other folders)
