[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "packutils"
version = "0.0.1"
authors = [
  { name="Arno Schiller", email="info@byschiller.de" },
]
description = "Utilities for 2D and 3D bin packing problems."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ArnoSchiller/PackingUtils"
"Bug Tracker" = "https://github.com/ArnoSchiller/PackingUtils/issues"