[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "packutils"
authors = [
    {name = "Arno Schiller", email = "schiller@swms.de"},
]
description = ""
readme = "README.md"
requires-python = ">=3.8"
version = "2024.0.0"

[tool.setuptools.packages.find]
where = ["packutils"]