[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "packutils"
version = "0.0.1"
authors = [
  { name="Arno Schiller", email="schiller@swms.de" },
]
readme = "README.md"

requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
repository = "https://github.com/SWMSConsulting/PackingUtils"